fix: overflow issues

--- a/src/app/components/project-details/project-details.component.scss
+++ b/src/app/components/project-details/project-details.component.scss
@@ -44,10 +44,12 @@
             display: flex;
             gap: 12px;
             justify-content: flex-start;
+            flex-wrap: wrap;
             .tag{
                 padding: 4px 24px;
                 border: 1px solid #E9ECEF;
                 border-radius: 144px;
+                width: max-content;
                 .text{
                     font-size: 16px;
                     line-height: 24px;
@@ -787,8 +789,8 @@
                 overflow: hidden;
                 justify-content: center;
                 img{
-                    object-fit: cover;
-                    max-width: 700px;
+                    object-fit: none;
+                    max-width: -webkit-fill-available;
                 }  
             }
         }
@@ -900,6 +902,8 @@
             .cbpi-animated-container{
                 .primary-gif-container{
                     max-height: 247px;
+                    min-width: auto;
+                    overflow: hidden;
                     img{
                         left: -25%;
                         width: 145%;
@@ -918,6 +922,7 @@
             .swappinc-animated-container{
                 max-height: 250px;
                 min-height: 250px;
+                overflow: hidden;
             }
         }
     }
